--- a/index.css
+++ b/index.css
@@ -1,3 +1,7 @@
+body {
+    margin: 0;
+    padding: 0;
+}
 :root {
     --contact-form-width: 360px;
 }
@@ -30,3 +34,27 @@
     left: 0;
 }
 
+#cookies-msg {
+    position: absolute;
+    max-height: 0;
+    overflow: hidden;
+    transition: 300ms;
+
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: gray;
+    color: white;
+    padding-left: 12px;
+    padding-top: 0;
+    padding-right: 12px;
+    padding-bottom: 0;
+}
+
+#cookies-msg.show-fade-away {
+    /* display: block; */
+    transition: 300ms;
+    max-height: 140px;
+    padding-top: 12px;
+    padding-bottom: 12px;
+}
