--- a/index.css
+++ b/index.css
@@ -6,6 +6,21 @@ body {
     --contact-form-width: 360px;
 }
 
+#my-button {
+    z-index: 100;
+}
+
+.dim {
+    position: fixed;
+    top: 0; bottom: 0; left: 0; right: 0;
+    width: 100%;
+    height: 100%;
+    background-color:lightgray;
+    opacity: 0.9;
+    z-index: 99998;
+    pointer-events: none;
+}
+
 #purple-box {
     position: fixed;
     left: calc(var(--contact-form-width) * -1);
@@ -15,13 +30,14 @@ body {
     background-color: purple;
     transition: 500ms;
     color: white;
+    z-index: 99999;
 
     -webkit-border-top-right-radius: 5px;
     -webkit-border-bottom-right-radius: 5px;
     -moz-border-radius-topright: 5px;
     -moz-border-radius-bottomright: 5px;
     border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;    
+    border-bottom-right-radius: 5px;
 }
 
 #purple-box a {
@@ -39,15 +55,17 @@ div#cookies-msg div {
 }
 
 #cookies-msg {
+    z-index: 99999;
     position: absolute;
     max-height: 0;
     overflow: hidden;
     transition: 400ms;
+    pointer-events: auto;
 
     top: 0;
     left: 0;
     width: 100%;
-    background-color: gray;
+    background-color: blue;
     color: white;
 }
 
